# vibe_paper

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: config.py  main.py
backend/agents/: formatter.py  graph.py  literature.py  outline.py  reviewer.py  router.py  state.py  writer.py
backend/api/: agents.py  literature.py  papers.py  ws.py
backend/database/: chroma_client.py  models.py  postgres.py  redis_client.py
backend/rag/: embedder.py  parser.py  retriever.py
backend/schemas/: agent.py  paper.py
chroma_data/: chroma.sqlite3
frontend/: app.py  utils.py
frontend/components/: chat.py  sidebar.py
frontend/pages/: editor.py  literature.py  monitor.py  project.py
