[project]
name = "vibe-paper"
version = "0.1.0"
description = "去中心化多智能体论文写作助手"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "langgraph>=0.2.0",
    "langchain>=0.3.0",
    "langchain-community>=0.3.0",
    "dashscope>=1.20.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "chromadb>=0.4.0",
    "redis[hiredis]>=5.0.0",
    "pymupdf>=1.24.0",
    "grobid-client-python>=0.0.7",
    "streamlit>=1.40.0",
    "pydantic-settings>=2.0.0",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "websockets>=13.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"
